--- a/analytics.html
+++ b/analytics.html
@@ -722,6 +722,14 @@
                 </td>
                 <td>${link.createdAt && link.createdAt.seconds ? formatDateTime(new Date(link.createdAt.seconds * 1000)) : ''}</td>
             `;
+            // Make the whole row clickable except for the copy button
+            row.style.cursor = "pointer";
+            row.addEventListener('click', (e) => {
+                // Prevent navigation if the copy button was clicked
+                if (e.target.closest('.copy-icon-btn')) return;
+                // Redirect to dashboard.html with the short URL as a query param
+                window.location.href = `dashboard.html?url=${encodeURIComponent(link.shortUrl)}`;
+            });
             tableBody.appendChild(row);
         });
     }
@@ -743,11 +751,16 @@
 
     // On page load, set user info and load links
     document.addEventListener('DOMContentLoaded', () => {
-        // Show user info from localStorage
         const userName = localStorage.getItem('userName') || 'User';
         const userAvatar = localStorage.getItem('userAvatar') || userName.charAt(0).toUpperCase();
+
         document.getElementById('user-name').textContent = userName;
-        document.getElementById('user-avatar').textContent = userAvatar;
+        const avatarElem = document.getElementById('user-avatar');
+        if (userAvatar.startsWith('http')) {
+            avatarElem.innerHTML = `<img src="${userAvatar}" alt="Avatar" style="width:100%;height:100%;border-radius:50%;">`;
+        } else {
+            avatarElem.textContent = userAvatar;
+        }
     });
 
     // Listen for auth state and load links
